fix qrcode not display on android, Closes #6

--- a/src/app/pay/pay.page.html
+++ b/src/app/pay/pay.page.html
@@ -3,7 +3,10 @@
     <div class="close">
       <ion-icon name="ios-close-circle-outline" class="close-icon" (click)="goBack()"></ion-icon>
     </div>
-    <qrcode *ngIf="payService.orderInfo.code_url" class="qrcode" [size]="300" [qrdata]="payService.orderInfo.code_url" [level]="'M'"></qrcode>
+    <div class="qrcode">
+      <!-- <canvas id="qr"></canvas> -->
+      <img src="{{qrcode}}">
+    </div>
     <div class="description">请打开微信扫码支付</div>
   </div>
 </div>
