use light-theme

--- a/src/app/common.scss
+++ b/src/app/common.scss
@@ -3,7 +3,7 @@
   width: 100%;
   flex: 1;
   display: flex;
-  color: RGBA(163, 139, 80, 1.00);
+  color: #000;
   overflow: auto;
   font-size: 20px;
 }
