--- a/src/app/products/detail/productDetail.page.scss
+++ b/src/app/products/detail/productDetail.page.scss
@@ -12,6 +12,7 @@
 .slides {
   height: 482px;
   width: 100%;
+  margin-top: 54px;
 }
 
 .slide-image {
@@ -19,7 +20,7 @@
 }
 
 .desc {
-  height: 324px;
+  height: 264px;
   width: 100%;
   padding-top: 20px;
   font-size: 24px;
