--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -18,37 +18,37 @@
   }
 
   .app-menu-1-2 {
-    background: url('/assets/icon/menu-1-2.png');
+    background: url('assets/icon/menu-1-2.png');
     background-repeat: no-repeat;
     background-size: contain;
     height: 280px;
   }
   .app-menu-1-2-active {
-    background: url('/assets/icon/menu-1-2-active.png');
+    background: url('assets/icon/menu-1-2-active.png');
     background-repeat: no-repeat;
     background-size: contain;
     height: 280px;
   }
   .app-menu-3 {
-    background: url('/assets/icon/menu-3.png');
+    background: url('assets/icon/menu-3.png');
     background-repeat: no-repeat;
     background-size: contain;
     height: 165px;
   }
   .app-menu-3-active {
-    background: url('/assets/icon/menu-3-active.png');
+    background: url('assets/icon/menu-3-active.png');
     background-repeat: no-repeat;
     background-size: contain;
     height: 165px;
   }
   .app-menu-4 {
-    background: url('/assets/icon/menu-4.png');
+    background: url('assets/icon/menu-4.png');
     background-repeat: no-repeat;
     background-size: contain;
     height: 165px;
   }
   .app-menu-4-active {
-    background: url('/assets/icon/menu-4-active.png');
+    background: url('assets/icon/menu-4-active.png');
     background-repeat: no-repeat;
     background-size: contain;
     height: 165px;
