--- a/src/app/cart/cart.page.html
+++ b/src/app/cart/cart.page.html
@@ -3,7 +3,7 @@
     <div class="close">
       <ion-icon name="ios-close-circle-outline" class="close-icon" (click)="goBack()"></ion-icon>
     </div>
-    <img src="/assets/icon/cart.png" class="cart-title">
+    <img src="assets/icon/cart.png" class="cart-title">
     <div class="cart-total">
       <div>全部商品</div>
       <div>合计：<span class="cart-price">￥{{totalAmount}}</span></div>
