--- a/src/app/common.scss
+++ b/src/app/common.scss
@@ -18,19 +18,19 @@
 }
 
 .main-bg-1 {
-  background-image: url('/assets/bg/bg1.jpg');
+  background-image: url('assets/bg/bg1.jpg');
 }
 
 .main-bg-1-clean {
-  background-image: url('/assets/bg/bg1_clean.jpg');
+  background-image: url('assets/bg/bg1_clean.jpg');
 }
 
 .main-bg-2 {
-  background-image: url('/assets/bg/bg2.jpg');
+  background-image: url('assets/bg/bg2.jpg');
 }
 
 .main-bg-3 {
-  background-image: url('/assets/bg/bg3.jpg');
+  background-image: url('assets/bg/bg3.jpg');
 }
 
 .close {
